--- a/UAS_Muhammad Aqil Alhafizh_20312088/index.html
+++ b/UAS_Muhammad Aqil Alhafizh_20312088/index.html
@@ -25,7 +25,7 @@
     STYLESHEETS
     =========================== -->
     <link rel="stylesheet" type="text/css" href="animate.css">
-    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="js/jquery-2.2.1.min.js"></script>
     <link rel="stylesheet" href="css/cssbostrap4.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
