--- a/UAS_Muhammad Aqil Alhafizh_20312088/index.html
+++ b/UAS_Muhammad Aqil Alhafizh_20312088/index.html
@@ -224,11 +224,9 @@
 
                 <div class="col-sm-11">
                     <h3><b> Deskripsi Diri</b></h3>
-                    <p><b>Berpengalaman sebagai SEO specialist selama 3 tahun di perusahaan telekomunikasi. Mahir
+                    <p><b>Berpengalaman sebagai Manusia selama 20 tahun di Bumi. Mahir
                             dalam
-                            mengaplikasikan HTML, JavaScript, dan CSS. Paham dengan penggunaan aplikasi Ahrefs, Moz
-                            Pro, SEMrush,
-                            SpyPro, Google Analytics, Google Search Console, Microsoft Excel. Mampu membuat
+                            mengaplikasikan HTML, JavaScript, dan CSS. Paham dengan penggunaan aplikasi Microsoft Office, Visual Studio Code dan 2012, Photoshop, Vegas Pro, Corel Draw, serta banyak lagi. Mampu melakukan tugas apapun seperti membuat
                             perencanaan dan strategi
                             konten, menganalisis pesaing, sekaligus menargetkan audiens. Memiliki keterampilan
                             berpikir kritis,
