--- a/UAS_Muhammad Aqil Alhafizh_20312088/index.html
+++ b/UAS_Muhammad Aqil Alhafizh_20312088/index.html
@@ -383,12 +383,30 @@
                         </div>
                     </div>
                     <!--skill end-->
+                    
+                    <p class="bolder">Python</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span class="sr-only">60% Complete (warning)</span>
+                        </div>
+                    </div>
+                    <!--skill end-->
+                    
+                    <p class="bolder">PHP</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span class="sr-only">50% Complete (warning)</span>
+                        </div>
+                    </div>
+                    <!--skill end-->
 
                     <p class="bolder">Html Programming</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
                             aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-                            <span class="sr-only">40% Complete (warning)</span>
+                            <span class="sr-only">80% Complete (warning)</span>
                         </div>
                     </div>
                     <!--skill end-->
