Hidden Class and  NPM

--- a/UAS_Muhammad Aqil Alhafizh_20312088/index.html
+++ b/UAS_Muhammad Aqil Alhafizh_20312088/index.html
@@ -170,7 +170,7 @@
 
                         </div>
                     </div>
-                    <h2><b> Faculty of Engineering &amp; Informatics</b></h2>
+                    <h2><b> <!---IF20B --- 20312088 --- -->Faculty of Engineering &amp; Informatics</b></h2>
                     <h2><b> University Teknokrat of Indonesia, Labuhan Ratu, Bandar Lampung, Lampung</b></h2>
                     <h2><b> email: muhammad_aqil_alhafizh@teknokrat.ac.id</b></h2>
                 </div><!-- Title end-->
